--- a/Home.html
+++ b/Home.html
@@ -549,7 +549,7 @@
                 </div>
                 <div class="home-container07">
                   <span class="home-text37">
-                    <span>$</span>
+                    <span>Rs.</span>
                     <span></span>
                   </span>
                   <span class="home-free-plan-price">0</span>
@@ -585,10 +585,10 @@
                 </div>
                 <div class="home-container14">
                   <span class="home-text45">
-                    <span>$</span>
+                    <span>Rs.</span>
                     <span></span>
                   </span>
-                  <span class="home-basic-plan-pricing">9.99</span>
+                  <span class="home-basic-plan-pricing">99</span>
                   <span class="home-text48">/ month</span>
                 </div>
                 <div class="home-container15">
@@ -630,10 +630,10 @@
                 </div>
                 <div class="home-container22">
                   <span class="home-text58">
-                    <span>$</span>
+                    <span>Rs</span>
                     <span></span>
                   </span>
-                  <span class="home-pro-plan-pricing">19.99</span>
+                  <span class="home-pro-plan-pricing">199</span>
                   <span class="home-text61">/ month</span>
                 </div>
                 <div class="home-container23">
